DigicielFull/force-app/main/default/objects/CloudingoAgent__Log__c/fields/CloudingoAgent__CreatedDate__c.field-meta.xml
<CustomField>
    <fullName>CloudingoAgent__CreatedDate__c</fullName>
    <defaultValue>NOW()</defaultValue>
    <label>Created Date</label>
    <type>DateTime</type>
</CustomField>