DigicielFull/force-app/main/default/objects/CloudingoAgent__Log__c/fields/CloudingoAgent__Message__c.field-meta.xml
<CustomField>
    <fullName>CloudingoAgent__Message__c</fullName>
    <label>Message</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>