DigicielFull/force-app/main/default/objects/CloudingoAgent__Log__c/fields/CloudingoAgent__Priority__c.field-meta.xml
<CustomField>
    <fullName>CloudingoAgent__Priority__c</fullName>
    <label>Priority</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Error</fullName>
            </value>
            <value>
                <fullName>Fatal</fullName>
            </value>
            <value>
                <fullName>Info</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>